# coding-bot

./: Cargo.toml  README.md  Rocket.toml  rocket.toml
resources/api/: api.json
resources/config/: settings.json
src/: lib.rs  main.rs
src/api/: api.rs
src/config/: settings.rs
src/handler/: message_type.rs  mod.rs  post_type.rs
src/model/: event.rs  event_v2.rs  group_message.rs  message.rs  mod.rs  private_message.rs  sender.rs
src/service/: http_post.rs  mod.rs
src/utils/: load_config.rs  load_res.rs  mod.rs  reqwest_util.rs
