[package]
name = "coding-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.5.0"
log = "0.4.21"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
tokio = { version = "1.38.0", features = ["full"] }
